--- a/about.html
+++ b/about.html
@@ -61,7 +61,9 @@
     <br><br>
 
     <section class="photos">
-      <img src="mrssonia1.png" alt="The picture of our proprietress">
+      <a href="mrssonia1.png" target="_blank">
+            <img src="mrssonia1.png" alt="Image description" >
+        </a>
       <p class="des">The picture of our proprietress</p>
     </section>  
 
@@ -84,7 +86,9 @@
     <br>
 
     <section class="photos">
-      <img src="background8.png" alt="">
+      <a href="background8.png" target="_blank">
+            <img src="background8.png" alt="Image description" >
+        </a>
     </section>
 
     <br>
@@ -106,7 +110,9 @@
     <br>
     
     <section class="photos">
-      <img src="background5.png" alt="">
+      <a href="background5.png" target="_blank">
+            <img src="background5.png" alt="Image description" >
+        </a>
     </section>
 
     <br>
