--- a/academics.html
+++ b/academics.html
@@ -57,7 +57,9 @@
     <br>
 
     <section class="photos">
-      <img src="background9.png" alt="">
+      <a href="background9.png" target="_blank">
+            <img src="background9.png" alt="Image description" >
+        </a>
     </section>
 
     <br>
@@ -98,7 +100,9 @@
     <br>
 
     <section class="photos">
-      <img src="background7.png" alt="">
+      <a href="background7.png" target="_blank">
+            <img src="background7.png" alt="Image description" >
+        </a>
     </section>
 
     <br>
@@ -123,7 +127,9 @@
     <br>
 
     <section class="photos">
-      <img src="background10.png" alt="">
+      <a href="background10.png" target="_blank">
+            <img src="background10.png" alt="Image description" >
+        </a>
     </section>
 
     <br>
