--- a/admission.html
+++ b/admission.html
@@ -47,7 +47,9 @@
     <br>
 
     <section class="photos">
-      <img src="uniform2.png" alt="">
+      <a href="uniform2.png" target="_blank">
+            <img src="uniform2.png" alt="Image description" >
+        </a>
     </section>
 
     <br>
@@ -82,7 +84,9 @@
     <br>
 
     <section class="photos">
-      <img src="background6.png" alt="">
+      <a href="background6.png" target="_blank">
+            <img src="background6.png" alt="Image description" >
+        </a>
     </section>
 
     <br>
@@ -104,7 +108,9 @@
     <br>
 
     <section class="photos">
-      <img src="background3.png" alt="">
+      <a href="background3.png" target="_blank">
+            <img src="background3.png" alt="Image description" >
+        </a>
     </section>
     
     <br>
