--- a/contacts.html
+++ b/contacts.html
@@ -42,7 +42,9 @@
     <br>
 
     <section class="photos">
-      <img src="building.png" alt="">
+      <a href="building.png" target="_blank">
+            <img src="building.png" alt="Image description" >
+        </a>
     </section>
     <br>
     <section class="seca">
