--- a/events.html
+++ b/events.html
@@ -48,7 +48,9 @@
       </p>
       <br>
       <section class="photos">
-        <img src="grad.png" alt="">
+        <a href="grad.png" target="_blank">
+            <img src="grad.png" alt="Image description" >
+        </a>
       </section>
       <br>
       <b>
