--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
     <section class="photos">
         <br>
         <div id="pic1">
-            <img src="uniform1.png">
+            <a href="uniform1.png" target="_blank">
+            <img src="uniform1.png" alt="Image description" >
+        </a>
         </div>
         <br>
     </section>
@@ -63,7 +65,9 @@
     <section class="photos">
         <br>
     <div id="pic2">
-        <img src="background4.png">
+        <a href="background4.png" target="_blank">
+            <img src="background4.png" alt="Image description" >
+        </a>
     </div>
     </section>
     <br>
@@ -77,7 +81,9 @@
     <section class="photos">
         <br>
         <div id="pic2">
-            <img src="background2.png">
+            <a href="background2.png" target="_blank">
+            <img src="background2.png" alt="Image description" >
+        </a>
         </div>
     </section>
     <br>
