--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
       <br>
       <h3>Useful Infos</h3>
       <p>School Name: New Reign Technical Schools (NRTS) <br>
-        Motto: Glorious Defenderd <br>
+        Motto: Glorious Defenders <br>
         Date of Establishment: 16th April 2021 <br>
         Type: Private | Day and Boarding <br>
         Location: <b>C/290 Segbeya Akpakpa Cotonou</b> <br>(for more info visit the <a href="./contacts" style="text-decoration: none; color:gold;">contacts</a> page)
